--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ nav {
   border-radius: var(--radius);
 }
 
-nav section > p:first-of-type {
+ h1 {
   font-size: 0.7em;
   margin-block-end: calc(var(--size) - 0.7rem);
   color: var(--White);
