--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   --Medium-brown: hsl(28, 10%, 53%);
   --Cream: hsl(27, 66%, 92%);
   --Very-pale-orange: hsl(33, 100%, 98%);
-  --White: hsl(292,0%,100%);
+  --White: hsl(292, 0%, 100%);
   
   --size: 1rem;
   --radius: 10px;
@@ -22,16 +22,16 @@
 }
 
 body {
-  font-size: 18px;
+  font-size: 1.2rem;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: var(--Cream);
-  min-height: 120svh;
+  min-height: 100svh;
 }
 
 .container {
-  width: clamp(320px, 40vw, 30vw);
+  min-width: 320px;
 }
 
 nav {
@@ -39,14 +39,14 @@ nav {
   align-items: center;
   justify-content: space-between;
   background-color: var(--Soft-red);
-  padding-inline: calc(var(--size) * 1.5);
-  padding-block: calc(var(--size) * 1.5);
-  margin-block-end: calc(var(--size) * 2);
+  padding-inline: calc(var(--size) * 1);
+  padding-block: calc(var(--size) * 1.2);
+  margin-block-end: calc(var(--size) * 1);
   border-radius: var(--radius);
 }
 
- h1 {
-  font-size: 0.7em;
+h1 {
+  font-size: 0.75em;
   margin-block-end: calc(var(--size) - 0.7rem);
   color: var(--White);
 }
@@ -61,11 +61,11 @@ main {
   border-radius: var(--radius);
   padding-inline: calc(var(--size) * 1);
   padding-block: calc(var(--size) * 1);
-  margin-block-end: calc(var(--size) * 2);
 }
 
 h2 {
-  margin-block-end: calc(var(--size) * 2);
+  font-size: 1.2em;
+  margin-block-end: calc(var(--size) * 1);
 }
 
 .bar-chart {
@@ -73,12 +73,12 @@ h2 {
   align-items: flex-end;
   justify-content: space-between;
   gap: 0.7rem;
-  height: 180px;
+  height: 140px;
   margin-block-end: calc(var(--size) *1);
 }
 
 .bar {
-  width:  20%;
+  width: 20%;
   background-color: var(--Soft-red);
   border-radius: calc(var(--radius) - 5px);
   position: relative;
@@ -93,7 +93,7 @@ h2 {
 }
 
 .wednesday {
-  height: 80%;
+  height: 85%;
   background-color: var(--Cyan);
 }
 
@@ -124,10 +124,10 @@ h2 {
 }
 
 .days p {
-  font-size: 0.6em;
-  font-weight: 450;
+  font-size: 0.65em;
+  font-weight: 420;
   text-align: center;
-  width:  20%;
+  width: 20%;
   color: var(--Medium-brown);
 }
 
@@ -140,9 +140,9 @@ h2 {
 .Amounts {
   display: grid;
   grid-template-columns: 3fr 2fr;
-  grid-template-areas: 
-  "CN PV"
-  "CN p";
+  grid-template-areas:
+    "CN PV"
+    "CN p";
 }
 
 .cutrent-number {
@@ -158,10 +158,10 @@ h2 {
   text-align: right;
 }
 
-.previous-number + p {
+.previous-number+p {
   grid-area: p;
   color: var(--Medium-brown);
-  font-size: 0.7em; 
+  font-size: 0.7em;
   text-align: right;
 }
 
@@ -169,7 +169,7 @@ h2 {
   background-color: var(--Dark-brown);
   border-radius: calc(var(--radius) - 5px);
   color: var(--Very-pale-orange);
-  font-size: 0.7em; 
+  font-size: 0.7em;
   font-weight: 700;
   padding-inline: calc(var(--size) - 0.8rem);
   padding-block: calc(var(--size) - 0.6rem);
@@ -182,4 +182,53 @@ h2 {
 
 .show {
   display: block;
+}
+
+@media (min-width: 900px) {
+  
+  .container {
+    min-width: 500px;
+  }
+  
+  .logo {
+    width: 100px;
+  }
+  
+  nav {
+    padding-inline: calc(var(--size) * 2);
+    padding-block: calc(var(--size) * 2);
+    margin-block-end: calc(var(--size) * 1.5);
+  }
+  
+  h1 {
+    font-size: 0.75em;
+    margin-block-end: calc(var(--size) - 0.5rem);
+  }
+  
+  .balance {
+    font-size: 1.6em;
+  }
+  
+  main {
+    padding-inline: calc(var(--size) * 2);
+    padding-block: calc(var(--size) * 1.5);
+  }
+  
+  h2 {
+    font-size: 1.4em;
+    letter-spacing: 1.5px;
+    margin-block-end: calc(var(--size) * 1.5);
+  }
+  
+  .bar-chart {
+    gap: var(--size);
+    height: 150px;
+  }
+  
+  .bar,
+  .days p {
+    width: 10%;
+  }
+  
+  
 }
